--- a/Thanksgiving/index.html
+++ b/Thanksgiving/index.html
@@ -323,9 +323,19 @@
         // Passcode to letter content mapping
         const letters = {
             'riyachargers': {
-                content: `Dear Xin,
+                content: `Dear Riya, 
 
-this is a test`
+It was almost a year ago now when I started thinking about coming back to USC. I remember Aryan told me people were already signing houses (Alex) and I panicked, so the two months after that were super tumultuous, constantly flicking between choosing USC or Bocconi. I was still peak indecision when Will told me about his Hawaii hot tub tale and then I remember calling my dad like this is SUCH a deal and that I’d have to decide ASAP. We couldn’t get critical mass to sign on so then that was when we and Jenny started looking. At the time, I was living with Isabelle and I told her I had faith in living with you and that I’d be really glad for an opportunity to get to know you better. 
+
+I was right! I knew I had a good hunch that we’d get along. At first, I appreciated our conversations, I told you that I enjoy your verbal eccentricities. But now that I’ve gotten to know you more, I most of all appreciate your thoughtfulness when it comes to both yourself and how you treat others. I think you operate with a lot of self-respect through principles that you set for yourself that I’ve learned from. I also see how you treat other people with a lot of thought, just from the way you talk about your friends from home and in WBB. I feel like you would always have a reason for doing something and have control over your life without letting the whimsies of everyday take ahold of you. 
+
+I recently told Isabelle that in this new life at USC I can probably count on you the most. And for that I am super grateful. I’m not the best at giving or like showing that I want to give, but I hope that you feel like you can count on me as well. 
+
+Merry thanksgiving, 
+
+Xin
+
+`
             },
             'abc123': {
                 content: `Dear Sarah,
