--- a/index.html
+++ b/index.html
@@ -336,9 +336,11 @@
 
 It was almost a year ago now when I started thinking about coming back to USC. I remember Aryan told me people were already signing houses (Alex) and I panicked, so the two months after that were super tumultuous, constantly flicking between choosing USC or Bocconi. I was still peak indecision when Will told me about his Hawaii hot tub tale and then I remember calling my dad like this is SUCH a deal and that I’d have to decide ASAP. We couldn’t get critical mass to sign on so then that was when we and Jenny started looking. At the time, I was living with Isabelle and I told her I had faith in living with you and that I’d be really glad for an opportunity to get to know you better. 
 
-I was right! I knew I had a good hunch that we’d get along. At first, I appreciated our conversations, I told you that I enjoy your verbal eccentricities. But now that I’ve gotten to know you more, I most of all appreciate your thoughtfulness when it comes to both yourself and how you treat others. I think you operate with a lot of self-respect through principles that you set for yourself that I’ve learned from. I also see how you treat other people with a lot of thought, just from the way you talk about your friends from home and in WBB. I feel like you would always have a reason for doing something and have control over your life without letting the whimsies of everyday take ahold of you. 
+I was right! I knew I had a good hunch that we’d get along. At first, I appreciated our conversations, I told you that I enjoy your verbal eccentricities. I enjoy sharing since you’re a top notch listener and enjoy hearing your takes and stories vice versa.
 
-I recently told Isabelle that in this new life at USC I can probably count on you the most. And for that I am super grateful. I’m not the best at giving or like showing that I want to give, but I hope that you feel like you can count on me as well. 
+But now that I’ve gotten to know you more, I most of all appreciate your thoughtfulness when it comes to both yourself and how you treat others. I think you operate with a lot of self-respect through principles that you set for yourself that I’ve learned from. I also see how you treat other people with a lot of thought, just from the way you talk about your friends from home and in WBB. I feel like you would always have a reason for doing something, treat your relationships with care, and have control over your life without letting the whimsies of everyday take ahold of you. 
+
+I recently told Isabelle that in this new life at USC I can probably count on you the most. And for that I am super grateful. I’m not the best at giving or like showing that I want to give, but I hope that you feel like you can count on me as well. I am thankful to share life with you!
 
 Merry thanksgiving, 
 
@@ -346,36 +348,22 @@ Xin
 
 `
             },
-            'abc123': {
-                content: `Dear Sarah,
+            '8hugsaday': {
+                content: `Dearest Jenny, 
 
-Happy Thanksgiving! I wanted to take this opportunity to express my heartfelt gratitude for your friendship.
+Thank you so much for always being having such a radiating presence in my life. You love to love life and it’s sooooo contagious. I always love seeing you come back after a bike ride and still be so in awe of what you saw even with more rides you go on. And I am always more inspired when you talk about an experience (like Taiwan hahahahha).
 
-Your constant support and encouragement have been a source of strength for me throughout this year. Thank you for always being there when I needed someone to talk to.
+From our peak summer in HK to now I really enjoy seeing all the things you’ve started to do and enjoy hearing about your stories when you share with me. I am so thankful to share this piece of life with you! 
 
-I'm grateful for all the laughter we've shared and all the memories we've created together. You truly are a blessing in my life.
+Let’s make more food and go on more hikes ~~~~~~
 
-Wishing you and your family a wonderful Thanksgiving filled with love, joy, and delicious food!
+Merry thanksgiving, 
 
-With appreciation,
+Xin
 
-Your Friend`
+`
             },
-            'turkey2024': {
-                content: `Dear Mom,
 
-On this Thanksgiving day, I want to express my deepest gratitude for everything you've done for me.
-
-Your unconditional love, endless patience, and wise guidance have shaped me into who I am today. Thank you for all the sacrifices you've made and for always believing in me.
-
-I'm so grateful for the wonderful traditions you've created for our family and for the way you make every holiday special.
-
-Thank you for being the most amazing mother anyone could ask for.
-
-With all my love,
-
-Your Child`
-            }
         };
 
         // DOM elements
