--- a/index.html
+++ b/index.html
@@ -364,6 +364,26 @@ Xin
 `
             },
 
+            'bryce4prez': {
+                content: `Dear Bryan, 
+
+Happy thanksgiving! I want to convey my gratitude for meeting you this year. The main reason I wanted to get back involved with Lava was because I knew I would have the highest chances here of making great friends, and I’m so glad that the cards were dealt in my favor. Everything can be seen with a glass half full mentality, and I think even the Cole situation had some merit to it since I got to work with you more. As a result, of the people I met this semester, you’re probably the person I’ve gotten closest to. I wasn’t really expecting to forge new connections much since most people would have set friends already, so I’m glad that you’ve been open to get to know me as well. 
+
+I’m grateful to have gotten to know you because you’re a great person to talk with, and clearly as we’ve been sharing, that’s hard to come by. 
+
+Also, going back to our conversation about how there is something we admire in our friends, I have noticed that you move about your life with a lot of consideration (which I mentioned to you briefly). I don’t know your core that well yet, but from what I’ve seen, I think you extend a lot of care to people in your life and the things you do (from taking a detour to bring me the last two Pacificos left from retreat or even just thanking everyone on board whenever they do something, to weightier things like sacrificing your sleep to bond with your housemates or sharing about your thoughts about homelessness). I feel like the more I get to know you the more “good” of a person you seem to be, and that’s also hard to come by. You’ve made me think more about my own conduct and I appreciate that. 
+
+And you know as I say this it’s making me think how similar you and my housemate Riya (dance girl) actually are. I hope there’s a time in the future we can hang out. I think you’d enjoy talking to her. 
+
+Thank you for entertaining and building onto my thoughts, 
+
+Xin
+
+P.S. I know I told you that I’m not exactly in my element expressing words of affirmation but that usually only applies verbally…
+
+`
+            },
+
         };
 
         // DOM elements
