--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ I’m grateful to have gotten to know you because you’re a great person to tal
 
 Also, going back to our conversation about how there is something we admire in our friends, I have noticed that you move about your life with a lot of consideration (which I mentioned to you briefly). I don’t know your core that well yet, but from what I’ve seen, I think you extend a lot of care to people in your life and the things you do (from taking a detour to bring me the last two Pacificos left from retreat or even just thanking everyone on board whenever they do something, to weightier things like sacrificing your sleep to bond with your housemates or sharing about your thoughts about homelessness). I feel like the more I get to know you the more “good” of a person you seem to be, and that’s also hard to come by. You’ve made me think more about my own conduct and I appreciate that. 
 
-And you know as I say this it’s making me think how similar you and my housemate Riya (dance girl) actually are. I hope there’s a time in the future we can hang out. I think you’d enjoy talking to her. 
+And you know as I say this it’s making me think how similar you and my housemate Riya (dance girl) actually are. I hope we can hang out sometime. I think you’d enjoy talking to her. 
 
 Thank you for entertaining and building onto my thoughts, 
 
