--- a/index.html
+++ b/index.html
@@ -382,10 +382,26 @@ Xin
 P.S. I know I told you that I’m not exactly in my element expressing words of affirmation but that usually only applies verbally…
 
 `
-
-
-
             },
+
+            'OGlavabestie': {
+                content: `Dear Cat, 
+
+Happy thanksgiving! 
+
+I am so thankful that you are still in my life and it just makes me think how the people who stay in your life come by unexpectedly. 
+
+Thank you for coming to see me in every place I’ve been to the last three years (you’re missing the Middle East but that can be amended soon enough haha), thank you for sending me articles that admittedly I don’t read immediately but I do promise that I get to them (now I am going through the Less Wrong HP series and really enjoying that). Side note is that some of the articles I still mention most, like the good conversations have doorknobs one, are ones that you originally sent me so you have become of the best curators of content in my life. 
+
+I’m always in admiration of your drive and correspondingly confidence in yourself that you’re able to get to places you want to be and reap the most out of those places. I’m always excited to hear about the choices you make. 
+
+Merry thanksgiving, 
+
+Xin
+
+`
+            },
+
 
         };
 
