--- a/index.html
+++ b/index.html
@@ -403,6 +403,23 @@ Xin
             },
 
 
+            'casecompfinalboss': {
+                content: `Dear Thien, 
+
+Happy thanksgiving! I don’t know if you celebrate it there but it’s such a big deal here that everyone has left campus already to go home hahahahha, it’s a ghost town out here. 
+
+I’m super thankful for getting to know you since like two years ago now, didn’t expect to make such a long term friend from that one camping trip but I’m grateful that we’ve stayed in contact by you inviting me to do case comps (how many has it even been lol) and also meeting up in Europe which is really crazy. 
+
+You are one of the most hardworking people I know so keep it up and I’m excited to hear about all the new projects you do. 
+
+Happy thanksgiving, 
+
+Xin
+
+`
+            },
+
+
         };
 
         // DOM elements
