--- a/index.html
+++ b/index.html
@@ -419,6 +419,25 @@ Xin
 `
             },
 
+             'billyboy': {
+                content: `Dear Will, 
+
+Happy thanksgiving!! 
+
+I started writing a birthday card to you and then with all the set up stuff I forgot to give to you. So then I thought lemme just merge it with a letter I give you for thanksgiving. 
+
+I am really grateful to have you in my life because you just radiate so much energy and excitement everyday. I am really sad when you are down because I feel like at the normal, steady state of who you are, you are like a golden retriever. It’s great to have that energy besides me in the house everyday. 
+
+I also admire you a lot for how much work and dedication I see you putting in for your startup. Literally see since I live with you. I am really proud of how far you’ve come in the progress and to see the unwavering confidence you have. I know you put in blood sweat and tears. It’s so rare to see and you make me wanna be more driven too. 
+
+Merry thanksgiving, 
+
+Xin
+
+
+`
+            },
+
 
         };
 
