--- a/index.html
+++ b/index.html
@@ -439,6 +439,25 @@ Xin
             },
 
 
+'machan': {
+                content: `Dear Yixiang, 
+
+I know Japan doesn’t celebrate it much but happy thanksgiving! I am reminded of how big of a thing it is here because even five days ago my friends started flying home already. Now campus is a ghost town. 
+
+I think it’s so awesome that the US has a holiday dedicated to gratitude. I want to thank you for being such a great brother. You’re becoming more driven and thoughtful and caring and I’m not surprised knowing you from long ago hahaha. You’re a genuinely good person and I think it’s so important to have the care that you do for other people. Sometimes my friends talk about the concept where if you could take away 1% from intelligence for 1% of a better person, would you. I always said that you wouldn’t need it because you’re already a good person. And vice versa if it’s taking away 1% of a better person and adding more to intelligence, I wouldn’t want to either because it’s rare to get someone who’s really good. 
+
+I’m also thankful because you want to get close to me. I feel like most siblings won’t really put in extra time to get to know eachother but I feel like at least when I’m back you do want to do more things together and I’m very appreciative of having that opportunity to get really close to someone within the family. 
+
+I will happily be the person who understands all aspects of your identity. 
+
+Love, 
+Xin
+
+
+`
+            },
+
+
         };
 
         // DOM elements
