--- a/index.html
+++ b/index.html
@@ -458,6 +458,24 @@ Xin
             },
 
 
+'msb13': {
+                content: `Dear Muktahal, 
+
+Happy thanksgiving! 
+
+I am really grateful to have be living with you this year and getting to know your way of life and you better. Lucas said to me once that he has learned so much from you and that you have changed his life. I thought it was Lucas being Lucas but I now understand that perspective better. You live life to its fullest and encourage others to live too. You don’t really have conventional barriers to experiencing as much as possible and that can be really contagious. 
+
+I’m very grateful that you’re sharing parts of your life with me such as the chai (I really look forward to it even if I may not wake up in time lol), your preferences in art, and the things you enjoy from the day to day. 
+
+I am excited to share more of life with you and looking forward to a few hours in Tokyo - we’re running Lost in Translation side quests.
+
+Xin
+
+
+`
+            },
+            
+
         };
 
         // DOM elements
